# fibermode

./: .gitignore  LICENSE.md  README.md  flake.nix  setup.cfg
fibermode/: __init__.py  field.py  hybrid.py  mode_base.py
