[metadata]
name = fibermode
version = 0.1.0
author = Akiyoshi Suda
author_email = aki.suda@protonmail.com
description = Library for computing the guided modes of optical nanofiber
classifiers =
	Programming Language :: Python :: 3

[options]
package = find:
python_requires = >=3.9
install_requires =
	numpy
  	scipy
